src/client/panes/unit/snapshots/zellij__client__panes__grid__grid_tests__vttest2_14.snap
---
source: src/client/panes/./unit/grid_tests.rs
expression: "format!(\"{:?}\", grid)"

---
00 (C): AAAAA                                                                                                         
01 (C): AAAAA                                                                                                         
02 (C): AAAAA                                                                                                         
03 (C): AAAAA                                                                                                         
04 (C):                                                                                                               
05 (C):                                                                                                               
06 (C):                                                                                                               
07 (C):            normal      bold        underscored blinking    reversed                                           
08 (C):                                                                                                               
09 (C): stars:     **********  **********  **********  **********  **********                                         
10 (C):                                                                                                               
11 (C): line:      ──────────  ──────────  ──────────  ──────────  ──────────                                         
12 (C):                                                                                                               
13 (C): x'es:      xxxxxxxxxx  xxxxxxxxxx  xxxxxxxxxx  xxxxxxxxxx  xxxxxxxxxx                                         
14 (C):                                                                                                               
15 (C): diamonds:  ◆◆◆◆◆◆◆◆◆◆  ◆◆◆◆◆◆◆◆◆◆  ◆◆◆◆◆◆◆◆◆◆  ◆◆◆◆◆◆◆◆◆◆  ◆◆◆◆◆◆◆◆◆◆                                         
16 (C):                                                                                                               
17 (C):                                                                                                               
18 (C):                                                                                                               
19 (C):                                                                                                               
20 (C): Test of the SAVE/RESTORE CURSOR feature. There should                                                         
21 (C): be ten characters of each flavour, and a rectangle                                                            
22 (C): of 5 x 4 A's filling the top left of the screen.                                                              
23 (C): Push <RETURN>                                                                                                 
24 (C):                                                                                                               
25 (C):                                                                                                               
26 (C):                                                                                                               
27 (C):                                                                                                               
28 (C):                                                                                                               
29 (C):                                                                                                               
30 (C):                                                                                                               
31 (C):                                                                                                               
32 (C):                                                                                                               
33 (C):                                                                                                               
34 (C):                                                                                                               
35 (C):                                                                                                               
36 (C):                                                                                                               
37 (C):                                                                                                               
38 (C):                                                                                                               
39 (C):                                                                                                               
40 (C):                                                                                                               

