src/client/panes/unit/snapshots/zellij__client__panes__grid__grid_tests__vttest2_3.snap
---
source: src/client/panes/./unit/grid_tests.rs
expression: "format!(\"{:?}\", grid)"

---
00 (C): 1234567890123456789012345678901234567890123456789012345678901234567890123456789                               
01 (C):                                                                                                               
02 (C):   This is 80 column mode, light background.                                                                   
03 (C):    This is 80 column mode, light background.                                                                  
04 (C):     This is 80 column mode, light background.                                                                 
05 (C):      This is 80 column mode, light background.                                                                
06 (C):       This is 80 column mode, light background.                                                               
07 (C):        This is 80 column mode, light background.                                                              
08 (C):         This is 80 column mode, light background.                                                             
09 (C):          This is 80 column mode, light background.                                                            
10 (C):           This is 80 column mode, light background.                                                           
11 (C):            This is 80 column mode, light background.                                                          
12 (C):             This is 80 column mode, light background.                                                         
13 (C):              This is 80 column mode, light background.                                                        
14 (C):               This is 80 column mode, light background.                                                       
15 (C):                This is 80 column mode, light background.                                                      
16 (C):                 This is 80 column mode, light background.                                                     
17 (C):                  This is 80 column mode, light background.                                                    
18 (C):                   This is 80 column mode, light background.                                                   
19 (C):                    This is 80 column mode, light background.Push <RETURN>                                     
20 (C):                                                                                                               
21 (C):                                                                                                               

