src/client/panes/unit/snapshots/zellij__client__panes__grid__grid_tests__vttest2_5.snap
---
source: src/client/panes/./unit/grid_tests.rs
expression: "format!(\"{:?}\", grid)"

---
00 (C): 1234567890123456789012345678901234567890123456789012345678901234567890123456789                               
01 (C):                                                                                                               
02 (C):   This is 80 column mode, dark background.                                                                    
03 (C):    This is 80 column mode, dark background.                                                                   
04 (C):     This is 80 column mode, dark background.                                                                  
05 (C):      This is 80 column mode, dark background.                                                                 
06 (C):       This is 80 column mode, dark background.                                                                
07 (C):        This is 80 column mode, dark background.                                                               
08 (C):         This is 80 column mode, dark background.                                                              
09 (C):          This is 80 column mode, dark background.                                                             
10 (C):           This is 80 column mode, dark background.                                                            
11 (C):            This is 80 column mode, dark background.                                                           
12 (C):             This is 80 column mode, dark background.                                                          
13 (C):              This is 80 column mode, dark background.                                                         
14 (C):               This is 80 column mode, dark background.                                                        
15 (C):                This is 80 column mode, dark background.                                                       
16 (C):                 This is 80 column mode, dark background.                                                      
17 (C):                  This is 80 column mode, dark background.                                                     
18 (C):                   This is 80 column mode, dark background.                                                    
19 (C):                    This is 80 column mode, dark background.Push <RETURN>                                      
20 (C):                                                                                                               
21 (C):                                                                                                               
22 (C):                                                                                                               
23 (C):                                                                                                               
24 (C):                                                                                                               
25 (C):                                                                                                               
26 (C):                                                                                                               
27 (C):                                                                                                               
28 (C):                                                                                                               
29 (C):                                                                                                               
30 (C):                                                                                                               
31 (C):                                                                                                               
32 (C):                                                                                                               
33 (C):                                                                                                               
34 (C):                                                                                                               
35 (C):                                                                                                               
36 (C):                                                                                                               
37 (C):                                                                                                               
38 (C):                                                                                                               
39 (C):                                                                                                               
40 (C):                                                                                                               

